# ddm_client

./: .gitignore  LICENSE  README.md  helpers.py  pyproject.toml
challenges/challenge_05_ddm_access_control/: 01_upload_file.py  02_attach_metadata.py  05_catalog_advanced.py  09_download_file.py  README.md
challenges/challenge_05_dmm_access_control/: 03_download_file_metadata.py  04_download_report_html.py  06_save_advanced_query.py  07_create_suite.py  08_validate.py  10_catalog_list.py  README.md
challenges/challenge_08_nft_provenance/: 01_update_profile.py  02_register_dataset_request.py  03_register_dataset.py  04_register_validation.py  05_claim_rewards.py  06_get_notifications.py  README.md
challenges/sample_files/: expectations.json  filters.json  prepare_validation.json  titanic_sample.csv  uploader_metadata.json
src/ddm_sdk/: __init__.py  client.py  config.py
tests/: README.md  conftest.py  login.py
tests/blockchain/: blockchain.py  test_00_dump_contracts.py  test_01_registry.py  test_02_events.py  test_03_txs.py  test_04_prepare_suite.py  test_05_prepare_validation.py  test_06_prepare_reward.py  test_contracts.py  test_ingest_tx.py  test_prepare_report.py  test_prepare_reward.py  test_prepare_suite.py  test_prepare_validation.py
tests/catalog/: catalog.py  test_01_catalog_list.py  test_02_catalog_my_catalog.py  test_03_catalog_options.py  test_04_catalog_tree.py  test_05_catalog_advanced.py
tests/expectations/: expectations.py  expectations_utils.py  test_01_upload_and_poll.py  test_02_create_suite.py  test_03_list_suites.py  test_04_get_suite.py
(+140 files in other folders)
